--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,11 @@
     "dev": "cross-env NODE_ENV=development webpack serve --config webpack.config.js",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
     "electron:dev": "concurrently \"npm run dev\" \"electron .\"",
+    "electron:production": "concurrently \"npm run build\" \"electron .\"",
     "package": "electron-builder build --win --publish never",
+    "build:package": "npm run build && npm run package",
+    "clean": "rimraf dist release",
+    "rebuild": "npm run clean && npm run build:package",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -26,13 +30,15 @@
     "html-webpack-plugin": "^5.6.0",
     "postcss": "^8.4.35",
     "postcss-loader": "^8.1.1",
+    "rimraf": "^6.0.1",
     "style-loader": "^3.3.4",
     "tailwindcss": "^3.4.1",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.2",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.3"
+    "webpack-dev-server": "^5.0.3",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "^1.3.1",
@@ -40,6 +46,8 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@types/socket.io-client": "^3.0.0",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "electron-is-dev": "^2.0.0",
@@ -48,9 +56,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.7"
   },
   "build": {
     "appId": "com.cybercafe.client",
@@ -63,6 +72,21 @@
     "directories": {
       "buildResources": "assets",
       "output": "release"
+    },
+    "win": {
+      "target": [
+        "portable",
+        "nsis"
+      ],
+      "sign": null,
+      "signingHashAlgorithms": null
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true,
+      "shortcutName": "Cybercafe Client"
     }
   }
 }
