--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,16 @@
     "dev:webpack": "webpack --config webpack.config.js --watch",
     "dev:electron": "wait-on dist/main/main.js dist/renderer/index.html && electron .",
     "dev-only": "electron .",
-    "build": "webpack --config webpack.config.js --mode production && electron-builder",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js --mode production",
+    "package": "electron-builder build --win --publish never",
+    "package:all": "electron-builder build -mwl --publish never",
+    "package:win": "electron-builder build --win --publish never",
+    "package:mac": "electron-builder build --mac --publish never",
+    "package:linux": "electron-builder build --linux --publish never",
+    "build:package": "npm run build && npm run package",
+    "build:package:win": "npm run build && npm run package:win",
+    "clean": "rimraf dist release",
+    "rebuild": "npm run clean && npm run build:package",
     "postinstall": "electron-builder install-app-deps"
   },
   "keywords": [
@@ -27,8 +36,18 @@
       "dist/**/*",
       "package.json"
     ],
+    "directories": {
+      "buildResources": "assets",
+      "output": "release"
+    },
     "win": {
-      "target": "nsis"
+      "target": [
+        "portable",
+        "nsis"
+      ],
+      "sign": null,
+      "signingHashAlgorithms": null,
+      "requestedExecutionLevel": "requireAdministrator"
     },
     "mac": {
       "target": "dmg"
@@ -38,13 +57,22 @@
     }
   },
   "dependencies": {
+    "@types/socket.io-client": "^3.0.0",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "electron-is-dev": "^2.0.0",
+    "electron-log": "^5.1.0",
+    "express": "^5.1.0",
     "framer-motion": "^11.1.23",
     "lucide-react": "^0.511.0",
+    "mysql2": "^3.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-router-dom": "^7.6.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "typeorm-extension": "^3.7.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -53,13 +81,14 @@
     "@types/react-dom": "^18.2.21",
     "autoprefixer": "^10.4.20",
     "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.10.0",
     "electron": "^30.0.6",
     "electron-builder": "^24.12.0",
-    "electron-webpack": "^2.8.2",
     "html-webpack-plugin": "^5.6.0",
     "postcss": "^8.4.38",
     "postcss-loader": "^8.1.1",
+    "rimraf": "^6.0.1",
     "style-loader": "^3.3.4",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
