--- a/server/package.json
+++ b/server/package.json
@@ -73,7 +73,8 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "typeorm-extension": "^3.7.1",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@types/node": "^18.19.17",
