--- a/client/package.json
+++ b/client/package.json
@@ -5,16 +5,22 @@
   "main": "dist/main/main.js",
   "scripts": {
     "start": "electron .",
-    "dev": "cross-env NODE_ENV=development webpack serve --config webpack.config.js",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
-    "electron:dev": "concurrently \"npm run dev\" \"electron .\"",
-    "electron:production": "concurrently \"npm run build\" \"electron .\"",
+    "dev": "concurrently \"npm run dev:webpack\" \"npm run dev:electron\"",
+    "dev:webpack": "webpack --config webpack.config.js --watch",
+    "dev:electron": "wait-on dist/main/main.js dist/renderer/index.html && electron .",
+    "dev-only": "electron .",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js --mode production",
     "package": "electron-builder build --win --publish never",
+    "package:all": "electron-builder build -mwl --publish never",
+    "package:win": "electron-builder build --win --publish never",
+    "package:mac": "electron-builder build --mac --publish never",
+    "package:linux": "electron-builder build --linux --publish never",
     "build:package": "npm run build && npm run package",
+    "build:package:win": "npm run build && npm run package:win",
     "clean": "rimraf dist release",
     "rebuild": "npm run clean && npm run build:package",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "postinstall": "electron-builder install-app-deps"
+   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
