--- a/server/package.json
+++ b/server/package.json
@@ -57,8 +57,10 @@
     }
   },
   "dependencies": {
+    "@radix-ui/react-progress": "^1.1.7",
     "@types/socket.io-client": "^3.0.0",
     "body-parser": "^2.2.0",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "electron-is-dev": "^2.0.0",
     "electron-log": "^5.1.0",
@@ -72,6 +74,7 @@
     "react-router-dom": "^7.6.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^3.3.0",
     "typeorm-extension": "^3.7.1",
     "zod": "^3.24.1",
     "zustand": "^5.0.5"
